Some updates. 😉